// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutlinedInput ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary css-1c6qg5m-MuiInputBase-root-MuiOutlinedInput-root"
  >
    <input
      class="MuiInputBase-input MuiOutlinedInput-input css-qkcx2b-MuiInputBase-input-MuiOutlinedInput-input"
      type="text"
      value="Value"
    />
    <fieldset
      aria-hidden="true"
      class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
    >
      <legend
        class="css-ihdtdm"
      >
        <span
          class="notranslate"
        >
          ​
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`OutlinedInput ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary css-1a4gudp-MuiInputBase-root-MuiOutlinedInput-root"
  >
    <input
      class="MuiInputBase-input MuiOutlinedInput-input css-1x6jcq1-MuiInputBase-input-MuiOutlinedInput-input"
      type="text"
      value="Value"
    />
    <fieldset
      aria-hidden="true"
      class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
    >
      <legend
        class="css-ihdtdm"
      >
        <span
          class="notranslate"
        >
          ​
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`OutlinedInput ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary css-ui3i5x-MuiInputBase-root-MuiOutlinedInput-root"
  >
    <input
      class="MuiInputBase-input MuiOutlinedInput-input css-1x6jcq1-MuiInputBase-input-MuiOutlinedInput-input"
      type="text"
      value="Value"
    />
    <fieldset
      aria-hidden="true"
      class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
    >
      <legend
        class="css-ihdtdm"
      >
        <span
          class="notranslate"
        >
          ​
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`OutlinedInput ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary css-14yq8mk-MuiInputBase-root-MuiOutlinedInput-root"
  >
    <input
      class="MuiInputBase-input MuiOutlinedInput-input css-jaerwt-MuiInputBase-input-MuiOutlinedInput-input"
      type="text"
      value="Value"
    />
    <fieldset
      aria-hidden="true"
      class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
    >
      <legend
        class="css-ihdtdm"
      >
        <span
          class="notranslate"
        >
          ​
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;
